[package]
name = "request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.26.0", features = ["full"] }
colored = { version = "2.0.0" }
serde_json = "1.0.94"

[[bin]]
path = "src/main.rs"
name = "req"
